[package]
name = "nymstr-groupd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"
uuid = { version = "1", features = ["v4"] }
pgp = "0.16"
rand = "0.8"
openssl = "0.10"
toml = "0.8"
ed25519-zebra = { version = "4.1", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"